<resources>
    <string name="app_name">HelioApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_control">Control</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_blinds_settings">Edit Blinds</string>
    <string name="set_time_message">Time set!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_button">Open</string>
    <string name="close_button">Close</string>
    <string name="settingsControlCat">Control</string>
    <string name="settingsCalibration">Motor Calibration</string>
    <string name="settingsViewSensors">View this Blind\'s Sensors</string>
    <string name="settingsViewSchedules">View this Blind\'s Schedules</string>
    <string name="settingsIcon">Icon</string>
    <string name="settingsName">Name</string>
    <string name="settingsIP">IP address</string>
    <string name="title_connect_hub">Connect to Hub</string>
    <string name="title_edit_blind">Edit Blind</string>
</resources>