<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:andriod="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.blind.SingleBlindSettingsPreferencesFragment">

    <EditTextPreference
        andriod:key="ip"
        andriod:title="@string/settingsIP"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        andriod:key="name"
        andriod:title="@string/settingsName"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        andriod:entries="@array/icons"
        andriod:entryValues="@array/iconsValues"
        andriod:key="changeIcon"
        andriod:title="@string/settingsIcon"
        app:useSimpleSummaryProvider="true" />

    <Preference
        andriod:key="seeSchedule"
        andriod:title="@string/settingsViewSchedules" />

    <Preference
        andriod:key="sensors"
        andriod:title="@string/settingsViewSensors" />

    <Preference
        andriod:key="calibration"
        andriod:title="@string/settingsCalibration" />

    <Preference
        andriod:key="motionSensor"
        andriod:title="Motion sensor settings"/>

    <Preference
        andriod:key="lightSensor"
        andriod:title="Light sensor settings"/>



</PreferenceScreen>